data sudah masuk ke dalam database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,4 +93,5 @@
     <string name="following">Following</string>
     <string name="followers">Followers</string>
     <string name="avatar">avatar</string>
+    <string name="save_bookmark">save</string>
 </resources>
